saves/test/demo_full_20240802_193545/thermostat/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp thermostat_tb.v thermostat.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
thermostat_tb.v:94: $finish called at 108000 (1ps)

iverilog cmd 2 error:

